--- a/src/app/annonces/annonces.page.html
+++ b/src/app/annonces/annonces.page.html
@@ -16,14 +16,17 @@
       [(ngModel)]="segment"
       color="primary"
     >
+      <!--Segment du partie Home qui affiche le slide de tout les annonces lorsqu'on le clique-->
       <ion-segment-button value="0">
         <ion-label>Home</ion-label>
         <ion-icon name="home-outline"></ion-icon>
       </ion-segment-button>
+      <!--Segment du partie qui affiche le slide des annonces du utlisateur connecté lorsqu'on le clique-->
       <ion-segment-button value="1">
         <ion-label>My annonces</ion-label>
         <ion-icon name="documents-outline"></ion-icon>
       </ion-segment-button>
+      <!--Segment du partie profile qui affiche le slide de profile -->
       <ion-segment-button value="2">
         <ion-label>Profile</ion-label>
         <ion-icon name="person-outline"></ion-icon>
@@ -31,6 +34,7 @@
     </ion-segment>
   </ion-toolbar>
   <!--ION SEGMENT-->
+  <!-- Slide qui affiche tout les annonces-->
   <ion-slides #slides (ionSlideDidChange)="slideChanged()" scrollbar="true">
     <ion-slide>
       <ion-grid>
@@ -73,7 +77,7 @@
         </ion-row>
       </ion-grid></ion-slide
     >
-    <!--Second slide my annonces-->
+    <!-- Slide qui affiche tout l'utlisateur connecté annonces-->
     <ion-slide
       ><ion-grid>
         <ion-row>
